issue #771 added file system attachment support for local testing